odometer type, return array for v2, refactor
